Added html for the return-button

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 	</head>
 	<body>
 		<div class="container">
+			<div class="return-button hide">
+				<button>
+					<i class="fas fa-undo-alt"></i>
+				</button>
+			</div>
 			<div class="title">
 				<h1 id="header-cleaning">Is it cleaning week?</h1>
 			</div>
