Change arrow button

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<div class="container">
 			<div class="return-button hide">
 				<button>
-					<i class="fas fa-undo-alt"></i>
+					<i class="fas fa-arrow-left"></i>
 				</button>
 			</div>
 			<div class="title">
