--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 					<button class="dropbtn">Choose your room</button>
 				</div>
 				<div class="dropdown-menu">
+					<button id="32-132">32-131</button>
 					<button id="32-132">32-132</button>
 					<button id="32-132">32-133</button>
 					<button id="32-132">32-134</button>
