Added localstorage and nicer return button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	</head>
 	<body>
 		<div class="container">
-			<div class="return-button hide">
+			<div class="return-button">
 				<button>
 					<i class="fas fa-arrow-left"></i>
 				</button>
@@ -43,6 +43,10 @@
 					<button id="32-132">32-136</button>
 					<button id="32-132">32-137</button>
 				</div>
+			</div>
+			<div class="current-cleaner hide">
+				<h1>Just nu har 32-137 städvecka</h1>
+				<h2>Du har städvecka om 2 veckor</h2>
 			</div>
 			<div class="cleaning-info hide">
 				<button class="kitchen-button">Kök</button>
