Added removed button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	</head>
 	<body>
 		<div class="container">
-			<div class="return-button">
+			<div class="return-button hide">
 				<button>
 					<i class="fas fa-arrow-left"></i>
 				</button>
